hotline/static/css/main.css
html, body {
    background-color:#3a7a16;
    font-family: Verdana, Geneva, sans-serif;
}

body {
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#577716+0,3a7a16+100 */
    background: #577716; /* Old browsers */
    background: -moz-linear-gradient(top,  #577716 0%, #3a7a16 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#577716), color-stop(100%,#3a7a16)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #577716 0%,#3a7a16 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #577716 0%,#3a7a16 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #577716 0%,#3a7a16 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #577716 0%,#3a7a16 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#577716', endColorstr='#3a7a16',GradientType=0 ); /* IE6-9 */
}

body.white {
    background:#fff;
    filter:none;
}

small {
    font-weight:normal;
}

.nowrap {
    white-space:nowrap;
}

.comma-list .comma:after {
    content:","
}

.comma-list .comma:last-of-type:after {
    content:""
}

.strong {
    font-weight:bold;
}

.container {
    background-color:#fff;
}

#id_q {
    width:400px;
}

#header {
    text-align:center;
    padding-bottom:20px;
    margin-bottom:5px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
}


/* the element right after the header should have a top border radius */
#header + * {
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    padding-top:20px;
}

#header-links {
    padding-top:40px;
    text-align:center;
}

#header-links a {
    font-size:16px;
    padding:6px 12px;
}

#header-links a.btn {
    margin-left:5px;
}


#header img {
    width:100%;
    max-width:500px;
}

#footer {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    padding-top:10px;
}

.arrow {
}

#headline {
    background: #577716;
}

#headline-info {
    color:#fff;
    font-size:18px;
}

#headline-map {
    padding-right:0px;
}

#headline-buttons {
    margin-top:30px;
    text-align:center;
}

#headline-buttons a {
    margin-right:5px;
    margin-left:5px;
    margin-bottom:10px;
}

#headline-buttons-info {
    background:none;
    border:1px solid white;
}

#headline-buttons-info:hover {
    text-decoration:underline;
}

#sponsors {
    background-color:#F8F8F8;
    padding:30px;
}

#sponsors a {
    display:inline-block;
    width:33%;
    text-align:center;
}

#midline {
    padding-top:50px;
    padding-bottom:50px;
}

#midline h1 {
    font-size:22px;
    text-align:center;
    margin-bottom:50px;
}

.midline-block {
    width:29%;
    min-width:200px;
    margin-left:2%;
    margin-right:2%;
    display:inline-block;
    vertical-align:top;
    padding-top:15px;
    padding-bottom:15px;
    margin-top:50px;
}

.midline-block.longest {
    border-right:1px solid #ddd;
    border-left:1px solid #ddd;
    padding-left:2%;
    padding-right:2%;
    margin-left:0;
    margin-right:0;
}

@media (max-width: 992px){
    .midline-block, .midline-block.longest {
        width:100%;
        display:block;
        margin-left:0;
        margin-right:0;
        border:none;
        padding:0;
    }
}

.formset-row-deleted {
    opacity:0.2;
    filter: alpha(opacity = 20);
}

.formset-row .form-group {
    margin-bottom:0;
}

.radio, .checkbox {
    margin-top:0;
}

.cloak-pushdown {
    margin-top:60px;
}

#mask-alert {
    text-align:center;
}

.credit img {
    padding-right:5px;
}

.misidentified {
    font-size:14px;
    color:#999;
}

.sidebar-block {
    margin-top:20px;
    overflow-y:auto;
}

.report-management a {
    color:#aaa;
    text-align:center;
}

.sidebar div:first-child {
    margin-top:0;
}

.galleria {
    height:400px;
}

#add-comment {
    margin-top:10px;
}

#create-comment {
    display:none;
}

#images input[type='file'] {
    display:inline;
    width:225px;
}

.formset-row-deleted {
    opacity:0.2;
    filter: alpha(opacity = 20);
}

.formset-row td {
    vertical-align:middle !important;
    white-space:nowrap
}

.comment-list .media {
    padding:10px;
    margin-top:0;
}

.comment-list .media:nth-child(odd) {
    background-color:#F9F9F9;
}

.comment-meta {
    font-size:11px;
    padding-top:5px;
}

#images {
    margin-bottom:20px;
}

#images table {
    margin-bottom:0;
}

#create-comment > fieldset {
    border: 1px solid #E5E5E5;
    padding: 10px;
}

#create-comment > fieldset > legend {
    border-bottom:none;
    display:inline;
    width:auto;
    padding:5px;
    margin-bottom:0;
    font-size:16px;
    font-weight:bold;
}

#create-comment #images legend {
    font-size:16px;
    font-weight:bold;
    margin-bottom:5px;
}

.visibility-selector select {
    width:150px;
}

.tab-pane {
    border:1px solid #ddd;
    border-top:none;
    padding:10px;
}

.check-all {
    display:none;
}

/* double-zebra is for zebra striping tables 2 rows at a time */
.double-zebra tbody tr:nth-child(4n+1), .double-zebra tbody tr:nth-child(4n+2)  {
    background: #F9F9F9;
}

.double-zebra tbody tr:nth-child(4n+4) td, .double-zebra tbody tr:nth-child(4n+2) td {
    border:none;
    padding-top:0;
}

.reports-table-title {
    font-size:18px;
    font-weight:bold;
}

.reports-table-form label {
    display:block;
}

.reports-table-img {
    width:1px;
    vertical-align:middle !important;
    text-align:center;
}

.reports-table-sort, .reports-table-subscribe {
    margin-top:10px;
}

.map-popover {
    display:block;
}

.map-popover img {
    float:left;
    padding-right:5px;
}

@media (min-width: 992px){
    #id_querystring {
        min-width:350px;
    }
}

.reports-search-species-list {
    display:none;
}

.reports-search-species-list .check-all {
    display:block;
}

.reports-search-species-list ul {
    list-style-type:none;
    padding-left:0;
}

.reports-search-species-list label {
    font-weight:normal;
}

.reports-search-species-list-field {
    max-height:300px;
    overflow:auto;
}

fieldset.reports-search-species-list {
    border: 1px solid #E5E5E5;
    padding: 10px;
}

fieldset.reports-search-species-list legend {
    border-bottom:none;
    display:inline;
    width:auto;
    padding:5px;
    margin-bottom:0;
    font-size:14px;
    font-style:italic;
    line-height:0;
}

blockquote {
    font-style:normal;
    font-size:14px;
}

.report-heading img {
    padding-right:10px;
    float:left;
}

.report-heading h3 {
    margin-top:0;
}

.report-heading {
    margin-bottom:20px;
}

.location blockquote {
    margin-top:5px;
    font-size:12px;
}

.report-status-info {
    float:right;
    padding:5px;
    margin-left:5px;
    margin-bottom:5px;
    font-size:11px;
    background-color:#fcf8e3;
}

.table-striped2>tbody>tr:nth-of-type(even) {
    background-color: #f9f9f9;
}

.getcontent-edit {
    background-color:#000;
    color:#fff;
    font-size:10px;
    font-weight:normal;
}

.getcontent-edit:hover {
    text-decoration:underline;
    color:#fff;
}

.account-links {
    float:right;
}

.account-links a {
    padding: 10px 5px;
    display:inline-block;
}

@media (max-width: 992px){
    .account-links {
        float:none;
        text-align:center;
    }
}

.reports-table {
    display:block;
    height:500px;
    overflow-x:auto;
}

#avatar_box {
    padding: 20px;
}

#avatar_box img {
    text-align:center;
}

#avatar-image {
    padding:5px;
    text-align:center;
}

@media (max-width: 992px){
    /* for small screens we need to have some space next to the map so the user
     * can scroll down the page. If we didn't have this, every time they try to
     * scroll, it would pan the map */
    .scroll-space-on-mobile {
        margin-right:40px;
    }
}

/* The images table goes from a normal table with multiple cells per row, to a
 * one-cell-per-row layout on smaller devices */
@media (max-width: 992px) {
    #images table tr {
        margin-bottom: 10px;
        display: block;
        border-bottom: 1px solid #ddd;
    }

    #images table td {
        display: block;
        text-align: left;
        border:none;
    }
}

